--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
     "vue-i18n": "^9.1.0",
-    "vue-recaptcha-v3": "^2.0.1",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-recaptcha2": "^1.8.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
